# zswi_eventplanner

./: .env.example  .gitignore  README.md  Taskfile.yml  bun.lockb  docker-compose.yml  manage.py  mypy.ini  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Budget_app/: asgi.py  settings.py  urls.py  wsgi.py
app/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: base.html  index.html
app/templates/events/: detail.html  list.html  my_events.html
app/templates/registration/: login.html  signup.html
app/templates/user/: logout.html
assets/ts/: calendar.ts  index.ts
docker/: Dockerfile  entrypoint.sh
